1.4.3: fix multi-method verifier compatibility